docs/7.52/md/abenabap_xslt_asxml_references.md
---
title: "Note"
description: |
  -   The asXML representation of reference variables and referenced objects is only of relevance for XSL transformations and the identity transformation(https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenid_trafo_glosry.htm 'Glossary Entry') ID. Simple transformations cannot currently b
version: "7.52"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_xslt_asxml_references.htm"
abapFile: "abenabap_xslt_asxml_references.htm"
keywords: ["do", "if", "try", "class", "data", "types", "abenabap", "xslt", "asxml", "references"]
---

* * *

SAP NetWeaver AS ABAP Release 752, ©Copyright 2017 SAP AG. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap.htm) →  [ABAP - Reference](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_reference.htm) →  [Data Interfaces and Communication Interfaces](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_data_communication.htm) →  [ABAP and XML](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_xml.htm) →  [Transformations for XML](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_xml_trafos.htm) →  [asXML - Canonical XML Representation](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_xslt_asxml.htm) →  [asXML - Mapping of ABAP Data Types](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_xslt_asxml_named.htm) → 

asXML - Mapping of Reference Variables and Objects

Anonymous data objects and instances of classes (objects) are addressed in ABAP using references in reference variables only. The associated asXML format consists of

-   subelements of [values](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_xslt_asxml_general.htm) for named reference variables and

-   (by default) subelements of [heap](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_xslt_asxml_general.htm) for the referenced objects.

The reference between the reference elements and the object elements is made using an XML reference mechanism, where a referenced object in the same XML data is identified by a key. The dynamic type of the reference variables for the object elements under heap is specified when serialization takes place, so that deserialization is unambiguous.

-   [Named Reference Variables](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenasxml_reference_variable.htm)

-   [Anonymous Data Objects](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenasxml_anonymous_data_object.htm)

-   [Class Instances](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenasxml_class_instances.htm)

Note

-   The asXML representation of reference variables and referenced objects is only of relevance for XSL transformations and the [identity transformation](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenid_trafo_glosry.htm "Glossary Entry") ID. Simple transformations cannot currently be used to transform reference variables.

-   For data references, the value "embedded" can be specified for the transformation option [data\_refs](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapcall_transformation_options.htm) to define an embedded repository in serializations instead of the repository in the element heap.

Executable Example

[asXML, Mapping of Objects](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenasxml_object_abexa.htm)

Continue
[asXML - Named Reference Variables](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenasxml_reference_variable.htm)
[asXML - Anonymous Data Objects](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenasxml_anonymous_data_object.htm)
[asXML - Instances of Classes](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenasxml_class_instances.htm)